# depot

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc.cjs  .prettierrc.js  Cargo.toml  Cross.toml  Justfile  LICENSE  Makefile.toml  README.md  build.mjs  flake.nix  jest.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json
.github/: tests.yaml
.github/workflows/: pre-release.yaml  release.yaml  tests.yaml
.github/workflows/setup/: action.yaml  actions.yaml
actions/install/: action.yml
crates/depot/: Cargo.toml
crates/depot-test-utils/: Cargo.toml
crates/depot-test-utils/src/: lib.rs
crates/depot/src/: lib.rs  utils.rs
crates/depot/src/commands/: build.rs  clean.rs  doc.rs  fix.rs  fmt.rs  init.rs  mod.rs  new.rs  setup.rs  test.rs
crates/depot/src/logger/: mod.rs  ringbuffer.rs  ui.rs
crates/depot/src/workspace/: dep_graph.rs  fingerprint.rs  manifest.rs  mod.rs  package.rs  process.rs  runner.rs
crates/depot/tests/tests/: build.rs  clean.rs  doc.rs  fix.rs  fmt.rs  main.rs  new.rs  test.rs
crates/graco/: Cargo.toml
crates/graco-test-utils/: Cargo.toml
crates/graco-test-utils/src/: lib.rs
crates/graco/src/: main.rs  utils.rs
crates/graco/src/commands/: build.rs  clean.rs  doc.rs  fmt.rs  init.rs  mod.rs  new.rs  setup.rs  test.rs
crates/graco/src/commands/configs/: tsconfig.json  vite.config.ts
crates/graco/src/logger/: ringbuffer.rs  ui.rs
crates/graco/src/workspace/: dep_graph.rs  mod.rs  package.rs  process.rs  runner.rs
crates/graco/tests/: build.rs  clean.rs  doc.rs  fmt.rs  test.rs
crates/graco/tests/tests/: build.rs  clean.rs  doc.rs  fmt.rs  main.rs  new.rs  test.rs
nix/: mk-depot-package.nix  mk-depot-website.nix  package.nix
patches/: esbuild@0.15.12.patch
scripts/: install.sh
src/: Globals.d.ts  build.ts  clean.ts  command.ts  common.ts  compile-entrypoint.ts  config-files.ts  fmt.ts  init.ts  log.ts  main.rs  main.ts  new.ts  test.ts  utils.rs  workspace.ts
src/assets/: .eslintrc.js  index.html  jest.config.cjs  jest.config.package.cjs  tsconfig.json  vite.config.ts
src/commands/: build.rs  build.ts  clean.ts  fmt.ts  init.ts  mod.rs  mod.ts  new.rs  new.ts  setup.rs  test.ts
src/commands/configs/: .eslintrc.cjs
src/logger/: logbuffer.rs  mod.rs  ringbuffer.rs  ui.rs
src/workspace/: mod.rs  package.rs  runner.rs
tests/: build.test.ts  clean.test.ts  fmt.test.ts  harness.ts  init.test.ts  synonyms.test.ts  test.test.ts
