[package]
name = "graco"
version = "0.1.0"
edition = "2021"
authors = ["Will Crichton <crichton.will@gmail.com>"]

[features]
dev = ["anyhow/backtrace", "env_logger/default"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = { version = "1", features = ["backtrace"] }
package_json_schema = "0.2"
indexmap = { version = "1" } # This must match package_json_schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = { version = "0.10", default-features = false }
rayon = "1"
tui = "0.19"
crossterm = "0.25" # This must match tui
ansi-to-tui = "2" # This must match tui
home = "0.5"
reqwest = { version = "0.11", features = ["blocking"] }
petgraph = { version = "0.6", default-features = false }
futures = "0.3"
async-trait = "0.1"
async-process = "1.6"
once_cell = "1"

[patch.crates-io]
# Waiting for this PR to get merged: https://github.com/uttarayan21/ansi-to-tui/pull/21
ansi-to-tui = { git = "https://github.com/willcrichton/ansi-to-tui" }