[package]
name = "depot-js"
version = "0.2.14"
description = "A Javascript devtool orchestrator"
edition = "2021"
authors = ["Will Crichton <crichton.will@gmail.com>"]
repository = "https://github.com/cognitive-engineering-lab/depot"
license = "MIT"
readme = "../../README.md"

[features]
dev = ["anyhow/backtrace", "env_logger/default"]

[dependencies]
## CLI
clap = { version = "4", features = ["derive"] }
shlex = "1"

## Javascript
package_json_schema = "0.2"
indexmap = "1" # This must match package_json_schema

## TUI
ratatui = "0.22"
# Note: use-dev-tty seems to be important to avoid a slowdown of handling user input
# when combined w/ async-process... not sure why
crossterm = { version = "0.26", features = ["event-stream", "use-dev-tty"] }
# This dep will cause problems on `cargo update` until this issue is resolved:
# https://github.com/uttarayan21/ansi-to-tui/issues/32
ansi-to-tui = "3.1" # This must match tui
ansi-diff = "1"
indicatif = "0.17"

## Utils
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
home = "0.5"
petgraph = { version = "0.6", default-features = false }
cfg-if = "1"
textwrap = "0.16"
bimap = "0.6"
maplit = "1"
notify = { version = "6.0.1", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = { version = "0.3.0", default-features = false }
ignore = "0.4.22"
pathsearch = "0.2.0"
chrono = { version = "0.4.38", features = ["serde", "std", "now"], default-features = false }

## Async
futures = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["sync", "macros", "time", "rt-multi-thread", "process"] }
atomic_enum = "0.2"
# We use rustls to avoid issues linking w/ libssl when cross-compiling
reqwest = {version = "0.11", default-features = false, features = ["stream", "rustls-tls"]}

## Dev
log = "0.4"
env_logger = { version = "0.10", default-features = false }


[dev-dependencies]
depot-test-utils = { path = "../depot-test-utils" }
tempfile = "3.4"
