[package]
name = "depot-js"
version = "0.3.1"
description = "A Javascript devtool orchestrator"
edition = "2024"
authors = ["Will Crichton <crichton.will@gmail.com>"]
repository = "https://github.com/cognitive-engineering-lab/depot"
license = "MIT"
readme = "../../README.md"

[features]
dev = ["anyhow/backtrace", "env_logger/default"]

[dependencies]
## CLI
clap = { version = "4", features = ["derive"] }
shlex = "1"

## Javascript
package_json_schema = "0.2"
indexmap = "2" # This must match package_json_schema

## TUI
ratatui = "=0.29.0"
# Note: use-dev-tty seems to be important to avoid a slowdown of handling user input
# when combined w/ async-process... not sure why
crossterm = { version = "0.26", features = ["event-stream", "use-dev-tty"] }
ansi-to-tui = "7.0.0" # This must match ratatui
ansi-diff = "1"

## OS
notify = { version = "6.0.1", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = { version = "0.3.0", default-features = false }
pathsearch = "0.2.0"
home = "0.5"

## Async
futures = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["sync", "macros", "time", "rt-multi-thread", "process", "io-util"] }
atomic_enum = "0.2"

## Utils
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = { version = "0.6", default-features = false }
cfg-if = "1"
textwrap = "0.16"
bimap = "0.6"
maplit = "1"
ignore = "0.4.22"

## Dev
log = "0.4"
env_logger = { version = "0.10", default-features = false }


[dev-dependencies]
depot-test-utils = { path = "../depot-test-utils" }
tempfile = "3.4"
